<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/numberButton"
        android:gravity="right"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/numberButton"
        android:gravity="right"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clear"
                style="@style/ActionButtonStyle"
                android:text="@string/ce"/>

            <TextView
                android:id="@+id/open"
                style="@style/ActionButtonStyle"
                android:text="@string/open_parenthesis"/>

            <TextView
                android:id="@+id/close"
                style="@style/ActionButtonStyle"
                android:text="@string/close_parenthesis"/>

            <TextView
                android:id="@+id/divide"
                style="@style/ActionButtonStyle"
                android:text="@string/divider"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                style="@style/NumberButtonStyle"
                android:text="@string/_7"/>

            <TextView
                android:id="@+id/eight"
                style="@style/NumberButtonStyle"
                android:text="@string/_8"/>

            <TextView
                android:id="@+id/nine"
                style="@style/NumberButtonStyle"
                android:text="@string/_9"/>

            <TextView
                android:id="@+id/mul"
                style="@style/ActionButtonStyle"
                android:text="@string/mul"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                style="@style/NumberButtonStyle"
                android:text="@string/_4"/>

            <TextView
                android:id="@+id/five"
                style="@style/NumberButtonStyle"
                android:text="@string/_5"/>

            <TextView
                android:id="@+id/six"
                style="@style/NumberButtonStyle"
                android:text="@string/_6"/>

            <TextView
                android:id="@+id/minus"
                style="@style/ActionButtonStyle"
                android:text="@string/minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                style="@style/NumberButtonStyle"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/two"
                style="@style/NumberButtonStyle"
                android:text="@string/_2"/>

            <TextView
                android:id="@+id/three"
                style="@style/NumberButtonStyle"
                android:text="@string/_3"/>

            <TextView
                android:id="@+id/plus"
                style="@style/ActionButtonStyle"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dot"
                style="@style/NumberButtonStyle"
                android:text="@string/dot"/>

            <TextView
                android:id="@+id/zero"
                style="@style/NumberButtonStyle"
                android:text="@string/_0"/>

            <TextView
                android:id="@+id/back"
                style="@style/NumberButtonStyle"
                android:text="@string/back"/>

            <TextView
                android:id="@+id/equals"
                style="@style/ActionButtonStyle"
                android:text="@string/equals"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>